terraform/main.tf
data "aws_availability_zones" "available" {}

resource "aws_vpc" "project_bedrock_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name    = "project-bedrock-vpc"
    Project = "karatu-2025-capstone"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.project_bedrock_vpc.id

  tags = {
    Name    = "project-bedrock-igw"
    Project = "karatu-2025-capstone"
  }
}

resource "aws_subnet" "public_subnets" {
  count = 2

  vpc_id                  = aws_vpc.project_bedrock_vpc.id
  cidr_block              = cidrsubnet(aws_vpc.project_bedrock_vpc.cidr_block, 8, count.index)
  availability_zone       = data.aws_availability_zones.available.names[count.index]
  map_public_ip_on_launch = true

  tags = {
    Name = "project-bedrock-public-${count.index + 1}"

    "kubernetes.io/role/elb" = "1"

    Project = "karatu-2025-capstone"
  }
}


resource "aws_subnet" "private_subnets" {
  count = 2

  vpc_id            = aws_vpc.project_bedrock_vpc.id
  cidr_block        = cidrsubnet(aws_vpc.project_bedrock_vpc.cidr_block, 8, count.index + 10)
  availability_zone = data.aws_availability_zones.available.names[count.index]

  tags = {
    Name = "project-bedrock-private-${count.index + 1}"

    "kubernetes.io/role/internal-elb" = "1"

    Project = "karatu-2025-capstone"
  }
}

resource "aws_eip" "nat_eip" {
  domain = "vpc"

  tags = {
    Name    = "project-bedrock-nat-eip"
    Project = "karatu-2025-capstone"
  }
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.public_subnets[0].id

  depends_on = [aws_internet_gateway.igw]

  tags = {
    Name    = "project-bedrock-nat"
    Project = "karatu-2025-capstone"
  }
}

resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.project_bedrock_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name    = "project-bedrock-public-rt"
    Project = "karatu-2025-capstone"
  }
}

resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.project_bedrock_vpc.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
  }

  tags = {
    Name    = "project-bedrock-private-rt"
    Project = "karatu-2025-capstone"
  }
}

resource "aws_route_table_association" "public_assoc" {
  count = 2

  subnet_id      = aws_subnet.public_subnets[count.index].id
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_route_table_association" "private_assoc" {
  count = 2

  subnet_id      = aws_subnet.private_subnets[count.index].id
  route_table_id = aws_route_table.private_rt.id
}
